test/resources/parser/failing/testPattern3.scala
object NestedMatchInvalid {
  x match {
    case 1 => y match {
      case 2 case 3 => 4
    }
  }
}